Add system font lookup for mac/windows
This changes the font plugin from using a font file to using a specific
installed system font, which is searched for on each specific system and
associated with the font file.  It now uses a font property instead of a
path property, and font size has been removed because the font property
now handles that.

When the module is first loaded, it will build up a list of system fonts
in order to be usable by Freetype.  It was quite painful to program this
because font files can contain multiple localized versions of their face
names, and then there was the issue where windows likes to mangle
custom style types to the font name.  Regardless, it all seems to have
worked out pretty well.

Minor issues:
- Truetype/Opentype fonts sometimes do not automatically have
  italic and/or bold styles available, it seems that the system applies
  transformations manually in those cases.  We don't do this yet,
  however, so right now a user might select a font with italic/bold
  only to discover that italic/bold doesn't always work.  Not entirely
  sure what to do about this yet.  There's probably a freetype function
  to do something like that somehow,

This also requires that ICONV be used for non-windows systems to be able
to look up localized font names within font files.  Windows will use
the win32 API and code page IDs to translate font names.

--- a/plugins/text-freetype2/CMakeLists.txt
+++ b/plugins/text-freetype2/CMakeLists.txt
@@ -1,23 +1,72 @@
 project(text-freetype2)
- 
-find_package(Freetype REQUIRED)
- 
-include_directories(
-	SYSTEM "${CMAKE_SOURCE_DIR}/libobs"
-	${LIBFREETYPE_INCLUDE_DIRS})
- 
+
+find_package(Freetype QUIET)
+if(NOT LIBFREETYPE_FOUND)
+	message(STATUS "Freetype library not found, Freetype text plugin disabled")
+	return()
+endif()
+
+if(APPLE)
+	find_package(ICONV QUIET)
+	if(NOT LIBICONV_FOUND)
+		message(STATUS "IConv library not found, Freetype text plugin disabled")
+		return()
+	endif()
+
+	find_library(COCOA Cocoa)
+
+	set(text-freetype2_PLATFORM_SOURCES
+		find-font-cocoa.m
+		find-font-iconv.c)
+
+	include_directories(${COCOA}
+		${LIBICONV_INCLUDE_DIRS})
+
+	set(text-freetype2_PLATFORM_DEPS
+		${COCOA}
+		${LIBICONV_LIBRARIES})
+
+	set_source_files_properties(find-font-cocoa.m
+		PROPERTIES LANGUAGE C)
+elseif(WIN32)
+	set(text-freetype2_PLATFORM_SOURCES
+		find-font-windows.c)
+else()
+	message(STATUS "Linux-specific code has yet to be written for the text plugin, just needs load_os_font_list written..  which, er, may or may not be a pain.  (My apologies in advance, please don't strangle me)")
+	return()
+
+	find_package(ICONV QUIET)
+	if(NOT LIBICONV_FOUND)
+		message(STATUS "IConv library not found, Freetype text plugin disabled")
+		return()
+	endif()
+
+	set(text-freetype2_PLATFORM_SOURCES
+		find-font-iconv.c)
+
+	include_directories(${LIBICONV_INCLUDE_DIR})
+	target_link_libraries(${LIBICONV_LIBRARIES})
+endif()
+
+include_directories(${LIBFREETYPE_INCLUDE_DIRS})
+add_definitions(${LIBFREETYPE_DEFINITIONS})
+
 set(text-freetype2_SOURCES
+	find-font.h
+	find-font.c
 	obs-convenience.c
 	text-functionality.c
 	text-freetype2.c
 	obs-convenience.h
 	text-freetype2.h)
- 
+
 add_library(text-freetype2 MODULE
+	${text-freetype2_PLATFORM_SOURCES}
 	${text-freetype2_SOURCES})
 target_link_libraries(text-freetype2
 	libobs
+	${text-freetype2_PLATFORM_DEPS}
 	${LIBFREETYPE_LIBRARIES})
- 
+
 install_obs_plugin(text-freetype2)
 install_obs_plugin_data(text-freetype2 data)
