--- a/plugins/obs-outputs/CMakeLists.txt
+++ b/plugins/obs-outputs/CMakeLists.txt
@@ -54,5 +54,4 @@ target_link_libraries(obs-outputs
 	libobs
 	${obs-outputs_PLATFORM_DEPS})
 
-install_obs_plugin(obs-outputs)
-install_obs_plugin_data(obs-outputs data)
+install_obs_plugin_with_data(obs-outputs data)
