--- a/plugins/text-freetype2/CMakeLists.txt
+++ b/plugins/text-freetype2/CMakeLists.txt
@@ -6,52 +6,26 @@ if(NOT FREETYPE_FOUND)
 	return()
 endif()
 
-if(APPLE)
-	find_package(Iconv QUIET)
-	if(NOT ICONV_FOUND)
-		message(STATUS "Iconv library not found, Freetype text plugin disabled")
-		return()
-	endif()
-
-	find_library(COCOA Cocoa)
-
-	set(text-freetype2_PLATFORM_SOURCES
-		find-font-cocoa.m
-		find-font-iconv.c)
-
-	include_directories(${COCOA}
-		${ICONV_INCLUDE_DIRS})
-
-	set(text-freetype2_PLATFORM_DEPS
-		${COCOA}
-		${ICONV_LIBRARIES})
-
-	set_source_files_properties(find-font-cocoa.m
-		PROPERTIES LANGUAGE C)
-elseif(WIN32)
+if(WIN32)
 	set(text-freetype2_PLATFORM_SOURCES
 		find-font-windows.c)
 else()
-	message(STATUS "Linux-specific code has yet to be written for the text plugin, just needs load_os_font_list written..  which, er, may or may not be a pain.  (My apologies in advance, please don't strangle me)")
-	return()
-
-	find_package(Iconv QUIET)
-	if(NOT ICONV_FOUND)
-		message(STATUS "Iconv library not found, Freetype text plugin disabled")
+	find_package(Fontconfig QUIET)
+	if(NOT FONTCONFIG_FOUND)
+		message(STATUS "fontconfig not found, Freetype text plugin disabled")
 		return()
 	endif()
 
 	set(text-freetype2_PLATFORM_SOURCES
-		find-font-iconv.c)
+		find-font-unix.c)
 
-	include_directories(${ICONV_INCLUDE_DIR})
+	include_directories(${FONTCONFIG_INCLUDE_DIRS})
 endif()
 
 include_directories(${FREETYPE_INCLUDE_DIRS})
 
 set(text-freetype2_SOURCES
 	find-font.h
-	find-font.c
 	obs-convenience.c
 	text-functionality.c
 	text-freetype2.c
@@ -66,8 +40,10 @@ target_link_libraries(text-freetype2
 	${text-freetype2_PLATFORM_DEPS}
 	${FREETYPE_LIBRARIES})
 
-if(UNIX AND ICONV_FOUND)
-	target_link_libraries(text-freetype2 ${ICONV_LIBRARIES})
+if(NOT WIN32)
+	if(FONTCONFIG_FOUND)
+		target_link_libraries(text-freetype2 ${FONTCONFIG_LIBRARIES})
+	endif()
 endif()
 
 install_obs_plugin_with_data(text-freetype2 data)
