--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "plugins/win-dshow/libdshowcapture"]
 	path = plugins/win-dshow/libdshowcapture
 	url = https://github.com/jp9000/libdshowcapture.git
+
+[submodule "plugins/mac-syphon/syphon-framework"]
+	path = plugins/mac-syphon/syphon-framework
+	url = https://github.com/palana/Syphon-Framework.git
