Disable OSX app nap
This will hopefully help deal with a particular issue where the program
may go to sleep if it hasn't received input from the user for long
periods, or if a game is running in fullscreen mode apparently.

--- a/cmake/osxbundle/Info.plist
+++ b/cmake/osxbundle/Info.plist
@@ -20,5 +20,7 @@
 	<string>10.8.5</string>
 	<key>NSHighResolutionCapable</key>
 	<true/>
+	<key>LSAppNapIsDisabled</key>
+	<true/>
 </dict>
 </plist>
