text-freetype2: Split find-font-windows.c
This moves font-finding code that can be shared to find-font.c.

--- a/plugins/text-freetype2/CMakeLists.txt
+++ b/plugins/text-freetype2/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 
 if(WIN32)
 	set(text-freetype2_PLATFORM_SOURCES
+		find-font.c
 		find-font-windows.c)
 else()
 	find_package(Fontconfig QUIET)
