Rename linux-xshm module to linux-capture

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,7 +7,7 @@ elseif(APPLE)
 	add_subdirectory(mac-avcapture)
 	add_subdirectory(mac-capture)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
-	add_subdirectory(linux-xshm)
+	add_subdirectory(linux-capture)
 	add_subdirectory(linux-xcomposite)
 	add_subdirectory(linux-pulseaudio)
 	add_subdirectory(linux-v4l2)
