--- a/libobs/LibObsConfig.cmake.in
+++ b/libobs/LibObsConfig.cmake.in
@@ -3,17 +3,20 @@
 #  LIBOBS_INCLUDE_DIRS
 #  LIBOBS_LIBRARIES
 #  LIBOBS_PLUGIN_DESTINATION{,32,64}
+#  LIBOBS_PLUGIN_DATA_DESTINATION
 
 set(LIBOBS_PLUGIN_DESTINATION "@CONF_PLUGIN_DEST@")
 set(LIBOBS_PLUGIN_DESTINATION32 "@CONF_PLUGIN_DEST32@")
 set(LIBOBS_PLUGIN_DESTINATION64 "@CONF_PLUGIN_DEST64@")
 set(LIBOBS_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
+set(LIBOBS_PLUGIN_DATA_DESTINATION "@CONF_PLUGIN_DATA_DEST@")
 
 # Cleanup possible relative paths
 get_filename_component(LIBOBS_PLUGIN_DESTINATION "${LIBOBS_PLUGIN_DESTINATION}" ABSOLUTE)
 get_filename_component(LIBOBS_PLUGIN_DESTINATION32 "${LIBOBS_PLUGIN_DESTINATION32}" ABSOLUTE)
 get_filename_component(LIBOBS_PLUGIN_DESTINATION64 "${LIBOBS_PLUGIN_DESTINATION64}" ABSOLUTE)
 get_filename_component(LIBOBS_INCLUDE_DIRS "${LIBOBS_INCLUDE_DIRS}" ABSOLUTE)
+get_filename_component(LIBOBS_PLUGIN_DATA_DESTINATION "${LIBOBS_PLUGIN_DATA_DESTINATION}" ABSOLUTE)
 
 if(NOT TARGET libobs)
 	include("${CMAKE_CURRENT_LIST_DIR}/LibObsTarget.cmake")
