Add media remuxer to media-io

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -143,7 +143,8 @@ set(libobs_mediaio_SOURCES
 	media-io/video-frame.c
 	media-io/format-conversion.c
 	media-io/audio-resampler-ffmpeg.c
-	media-io/video-scaler-ffmpeg.c)
+	media-io/video-scaler-ffmpeg.c
+	media-io/media-remux.c)
 set(libobs_mediaio_HEADERS
 	media-io/media-io-defs.h
 	media-io/video-io.h
@@ -151,7 +152,8 @@ set(libobs_mediaio_HEADERS
 	media-io/video-frame.h
 	media-io/format-conversion.h
 	media-io/audio-resampler.h
-	media-io/video-scaler.h)
+	media-io/video-scaler.h
+	media-io/media-remux.h)
 
 set(libobs_util_SOURCES
 	util/array-serializer.c
