--- a/plugins/win-dshow/CMakeLists.txt
+++ b/plugins/win-dshow/CMakeLists.txt
@@ -11,6 +11,7 @@ set(libdshowcapture_SOURCES
 	libdshowcapture/source/dshow-demux.cpp
 	libdshowcapture/source/dshow-enum.cpp
 	libdshowcapture/source/dshow-formats.cpp
+	libdshowcapture/source/dshow-hd-pvr1.cpp
 	libdshowcapture/source/dshow-hd-pvr2.cpp
 	libdshowcapture/source/dshow-hd-pvr-rocket.cpp
 	libdshowcapture/source/dshow-media-type.cpp
