--- a/plugins/text-freetype2/CMakeLists.txt
+++ b/plugins/text-freetype2/CMakeLists.txt
@@ -1,7 +1,14 @@
 project(text-freetype2)
 
+if(DISABLE_FREETYPE)
+	message(STATUS "Freetype text plugin disabled")
+	return()
+endif()
+
 find_package(Freetype QUIET)
-if(NOT FREETYPE_FOUND)
+if(NOT FREETYPE_FOUND AND ENABLE_FREETYPE)
+	message(FATAL_ERROR "Freetype library not found but set as enabled")
+elseif(NOT FREETYPE_FOUND)
 	message(STATUS "Freetype library not found, Freetype text plugin disabled")
 	return()
 endif()
@@ -12,7 +19,9 @@ if(WIN32)
 		find-font-windows.c)
 elseif(APPLE)
 	find_package(Iconv QUIET)
-	if(NOT ICONV_FOUND)
+	if(NOT ICONV_FOUND AND ENABLE_FREETYPE)
+		message(FATAL_ERROR "Iconv library not found but plugin set as enabled")
+	elseif(NOT ICONV_FOUND)
 		message(STATUS "Iconv library not found, Freetype text plugin disabled")
 		return()
 	endif()
@@ -35,7 +44,9 @@ elseif(APPLE)
 		PROPERTIES LANGUAGE C)
 else()
 	find_package(Fontconfig QUIET)
-	if(NOT FONTCONFIG_FOUND)
+	if(NOT FONTCONFIG_FOUND AND ENABLE_FREETYPE)
+		message(FATAL_ERROR "fontconfig not found but plugin set as enabled")
+	elseif(NOT FONTCONFIG_FOUND)
 		message(STATUS "fontconfig not found, Freetype text plugin disabled")
 		return()
 	endif()
