win-dshow: Add FFmpeg decoding support

--- a/plugins/win-dshow/CMakeLists.txt
+++ b/plugins/win-dshow/CMakeLists.txt
@@ -1,7 +1,19 @@
 project(win-dshow)
 
+find_package(Libavutil REQUIRED)
+include_directories(${LIBAVUTIL_INCLUDE_DIRS})
+add_definitions(${LIBAVUTIL_DEFINITIONS})
+
+find_package(Libavcodec REQUIRED)
+include_directories(${LIBAVCODEC_INCLUDE_DIRS})
+add_definitions(${LIBAVCODEC_DEFINITIONS})
+
+set(win-dshow_HEADERS
+	ffmpeg-decode.h)
+
 set(win-dshow_SOURCES
-	win-dshow.cpp)
+	win-dshow.cpp
+	ffmpeg-decode.c)
 
 set(libdshowcapture_SOURCES
 	libdshowcapture/source/capture-filter.cpp
@@ -33,10 +45,13 @@ set(libdshowcapture_HEADERS
 
 add_library(win-dshow MODULE
 	${win-dshow_SOURCES}
+	${win-dshow_HEADERS}
 	${libdshowcapture_SOURCES}
 	${libdshowcapture_HEADERS})
 target_link_libraries(win-dshow
 	libobs
-	strmiids.lib)
+	strmiids.lib
+	${LIBAVUTIL_LIBRARIES}
+	${LIBAVCODEC_LIBRARIES})
 
 install_obs_plugin_with_data(win-dshow data)
