Fix AppKit find module

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -28,7 +28,7 @@ elseif(APPLE)
 		platform-osx.mm)
 
 	find_package(AppKit REQUIRED)
-	set(obs_PLATFORM_LIBRARIES ${AppKit_LIBRARIES})
+	set(obs_PLATFORM_LIBRARIES ${APPKIT_LIBRARIES})
 
 	add_definitions(-fobjc-arc)
 elseif(UNIX)
