Initial obs-ffmpeg-source commit

--- a/plugins/obs-ffmpeg/CMakeLists.txt
+++ b/plugins/obs-ffmpeg/CMakeLists.txt
@@ -25,12 +25,20 @@ find_package(Libswresample REQUIRED)
 include_directories(${LIBSWRESAMPLE_INCLUDE_DIRS})
 add_definitions(${LIBSWRESAMPLE_DEFINITIONS})
 
+find_package(FFmpeg COMPONENTS avdevice REQUIRED)
+include_directories(${FFmpeg_INCLUDE_DIRS})
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STDC_CONSTANT_MACROS")
+
 set(obs-ffmpeg_HEADERS
 	obs-ffmpeg-formats.h
+	obs-ffmpeg-source.h
 	obs-ffmpeg-compat.h)
 set(obs-ffmpeg_SOURCES
 	obs-ffmpeg.c
 	obs-ffmpeg-aac.c
+	obs-ffmpeg-source-info.c
+	obs-ffmpeg-source.cpp
 	obs-ffmpeg-output.c)
 	
 add_library(obs-ffmpeg MODULE
@@ -43,6 +51,7 @@ target_link_libraries(obs-ffmpeg
 	${LIBAVUTIL_LIBRARIES}
 	${LIBSWSCALE_LIBRARIES}
 	${LIBAVFORMAT_LIBRARIES}
-	${LIBSWRESAMPLE_LIBRARIES})
+	${LIBSWRESAMPLE_LIBRARIES}
+    ${FFmpeg_LIBRARIES})
 
 install_obs_plugin_with_data(obs-ffmpeg data)
