Thread safety checkout for obs-ffmpeg-source

--- a/plugins/obs-ffmpeg/CMakeLists.txt
+++ b/plugins/obs-ffmpeg/CMakeLists.txt
@@ -5,27 +5,7 @@ if(WIN32)
 		w32-pthreads)
 endif()
 
-find_package(Libavcodec REQUIRED)
-include_directories(${LIBAVCODEC_INCLUDE_DIRS})
-add_definitions(${LIBAVCODEC_DEFINITIONS})
-
-find_package(Libavutil REQUIRED)
-include_directories(${LIBAVUTIL_INCLUDE_DIRS})
-add_definitions(${LIBAVUTIL_DEFINITIONS})
-
-find_package(Libswscale REQUIRED)
-include_directories(${LIBSWSCALE_INCLUDE_DIRS})
-add_definitions(${LIBSWSCALE_DEFINITIONS})
-
-find_package(Libavformat REQUIRED)
-include_directories(${LIBAVFORMAT_INCLUDE_DIRS})
-add_definitions(${LIBAVFORMAT_DEFINITIONS})
-
-find_package(Libswresample REQUIRED)
-include_directories(${LIBSWRESAMPLE_INCLUDE_DIRS})
-add_definitions(${LIBSWRESAMPLE_DEFINITIONS})
-
-find_package(FFmpeg COMPONENTS avdevice REQUIRED)
+find_package(FFmpeg REQUIRED)
 include_directories(${FFmpeg_INCLUDE_DIRS})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STDC_CONSTANT_MACROS")
@@ -47,11 +27,6 @@ add_library(obs-ffmpeg MODULE
 target_link_libraries(obs-ffmpeg
 	libobs
 	${obs-ffmpeg_PLATFORM_DEPS}
-	${LIBAVCODEC_LIBRARIES}
-	${LIBAVUTIL_LIBRARIES}
-	${LIBSWSCALE_LIBRARIES}
-	${LIBAVFORMAT_LIBRARIES}
-	${LIBSWRESAMPLE_LIBRARIES}
-    ${FFmpeg_LIBRARIES})
+	${FFmpeg_LIBRARIES})
 
 install_obs_plugin_with_data(obs-ffmpeg data)
