Add *32 and *64 build directories to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,14 @@
 #cmake
 /cmbuild/
 /build/
+/build32/
+/build64/
 /release/
+/release32/
+/release64/
 /debug/
+/debug32/
+/debug64/
 /builds/
 *.o.d
 *.ninja
