Add option to use Sparkle for updates
OBS Sparkle feeds have two extensions to vanilla Sparkle feeds:
- There can be two kinds of items per feed: (zipped) .app and .mpkg
  via <ce:packageType>app|mpkg</ce:packageType> (default is mpkg)
- Feed items can be disabled via <ce:deployed>false</ce:deployed>; these
  items will not be considered for updates unless
  "[General] UpdateToUndeployed=1" is set the global config

Unlike other Sparkle implementations the FeedURL cannot be updated via user
preferences because we support multiple app packages with the same package
identifier but different FeedURL settings on the same machine

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -50,6 +50,20 @@ elseif(APPLE)
 	set(obs_PLATFORM_LIBRARIES ${APPKIT_LIBRARIES})
 
 	add_definitions(-fobjc-arc)
+
+	option(ENABLE_SPARKLE_UPDATER "Enables updates via the Sparkle framework (don't forget to update the Info.plist for your .app)" OFF)
+	if(ENABLE_SPARKLE_UPDATER)
+		find_library(SPARKLE Sparkle)
+		include_directories(${SPARKLE})
+		set(obs_PLATFORM_SOURCES
+			${obs_PLATFORM_SOURCES}
+			sparkle-updater.mm)
+		set(obs_PLATFORM_LIBRARIES
+			${obs_PLATFORM_LIBRARIES}
+			${SPARKLE})
+		add_definitions(-DUPDATE_SPARKLE=1)
+	endif()
+
 elseif(UNIX)
         find_package(Qt5X11Extras REQUIRED)
 
