--- a/plugins/win-capture/CMakeLists.txt
+++ b/plugins/win-capture/CMakeLists.txt
@@ -24,5 +24,6 @@ target_link_libraries(win-capture
 
 install_obs_plugin_with_data(win-capture data)
 
+add_subdirectory(graphics-hook)
 add_subdirectory(get-graphics-offsets)
 add_subdirectory(inject-helper)
