win-capture: Add game capture
This adds the windows version of game capture.

New features:

- An option to hook any fullscreen application automatically (that
  doesn't have borders) so that no specific window configuration is
  required.  Definitely a sorely needed feature

- An option to force memory capture for the sake of compatibility with
  things such as SLI, multi-adapter setups (usually laptops), as well as
  the ability to be used with the OpenGL renderer

- An optimization option to force scaling on the GPU before texture
  transfer, reducing the transfer bandwidth (which is especially
  important for compatibility capture)

- An optimization option to limit framerate to the current OBS framerate
  to improve capture performance (mostly useful for compatibility
  capture)

- An option to capture third-party overlays (such as steam)

- Logging improvements, game capture log will now be sent via pipe
  instead of written to a separate file, making diagnosing problems a
  little bit easier

--- a/plugins/win-capture/CMakeLists.txt
+++ b/plugins/win-capture/CMakeLists.txt
@@ -12,9 +12,11 @@ set(win-capture_SOURCES
 	dc-capture.c
 	obfuscate.c
 	cursor-capture.c
+	game-capture.c
 	window-helpers.c
 	monitor-capture.c
 	window-capture.c
+	load-graphics-offsets.c
 	plugin-main.c)
 
 add_library(win-capture MODULE
@@ -22,6 +24,7 @@ add_library(win-capture MODULE
 	${win-capture_HEADERS})
 target_link_libraries(win-capture
 	libobs
+	ipc-util
 	psapi.lib)
 
 install_obs_plugin_with_data(win-capture data)
