win-capture: Add cursor capture capability

--- a/plugins/win-capture/CMakeLists.txt
+++ b/plugins/win-capture/CMakeLists.txt
@@ -3,6 +3,7 @@ project(win-capture)
 set(win-capture_HEADERS
 	obfuscate.h
 	hook-helpers.h
+	cursor-capture.h
 	graphics-hook-info.h
 	window-helpers.h
 	dc-capture.h)
@@ -10,6 +11,7 @@ set(win-capture_HEADERS
 set(win-capture_SOURCES
 	dc-capture.c
 	obfuscate.c
+	cursor-capture.c
 	window-helpers.c
 	monitor-capture.c
 	window-capture.c
