libobs: Add process piping functions
This adds functions for piping a command line program's stdin or stdout.
Note however that this is unidirectional only.

This will be especially useful later on when implementing MP4 output,
because MP4 output has to be piped to prevent unexpected program
termination from corrupting the file.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -43,6 +43,7 @@ if(WIN32)
 	set(libobs_PLATFORM_SOURCES
 		obs-windows.c
 		util/threading-windows.c
+		util/pipe-windows.c
 		util/platform-windows.c)
 	set(libobs_PLATFORM_DEPS
 		w32-pthreads
@@ -51,6 +52,7 @@ elseif(APPLE)
 	set(libobs_PLATFORM_SOURCES
 		obs-cocoa.c
 		util/threading-posix.c
+		util/pipe-posix.c
 		util/platform-nix.c
 		util/platform-cocoa.m)
 
@@ -69,6 +71,7 @@ elseif(UNIX)
 	set(libobs_PLATFORM_SOURCES
 		obs-nix.c
 		util/threading-posix.c
+		util/pipe-posix.c
 		util/platform-nix.c)
 endif()
 
@@ -179,6 +182,7 @@ set(libobs_util_HEADERS
 	util/c99defs.h
 	util/cf-parser.h
 	util/threading.h
+	util/pipe.h
 	util/cf-lexer.h
 	util/darray.h
 	util/circlebuf.h
